--- a/kitty.conf
+++ b/kitty.conf
@@ -7,7 +7,7 @@
 #: characters.
 
 # font_family        Droid Sans Mono Nerd Font Complete
-font_family      Fira Code Medium Nerd Font Complete Mono
+font_family      FiraCodeNerdFont Medium
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
